# banking77-intent-classifier

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: champion.json  clinc150_binary_oos_sentence_transformer_linear_bge_small.json  clinc150_binary_oos_tfidf_svc_lemmatized.json  clinc150_binary_oos_transformer_sequence_classifier_mpnet.json  clinc150_champion.json  clinc150_sentence_transformer_contrastive_mpnet.json  clinc150_sentence_transformer_contrastive_mpnet_maxsim_candidate.json  clinc150_sentence_transformer_knn.json  clinc150_sentence_transformer_linear.json  clinc150_sentence_transformer_linear_bge_small.json  clinc150_sentence_transformer_linear_bge_small_oos_threshold_03.json  clinc150_sentence_transformer_linear_bge_small_oos_threshold_03_margin_01.json  clinc150_sentence_transformer_linear_mpnet_base_v2.json  clinc150_tfidf_svc.json  clinc150_tfidf_svc_lemmatized.json  clinc150_tfidf_svc_random_search.json  clinc150_transformer_sequence_classifier_mpnet.json  clinc150_transformer_sequence_classifier_mpnet_distance.json  clinc150_transformer_sequence_classifier_mpnet_energy.json  clinc150_transformer_sequence_classifier_mpnet_temperature_scaled.json  phase1.json  sentence_transformer_knn.json  sentence_transformer_linear.json  sentence_transformer_linear_bge_small.json  sentence_transformer_linear_reranked.json  tfidf_svc.json  tfidf_svc_lemmatized.json  tfidf_svc_lemmatized_c001.json  tfidf_svc_lemmatized_c01.json  tfidf_svc_lemmatized_c1.json  tfidf_svc_lemmatized_c10.json  tfidf_svc_lemmatized_c100.json  tfidf_svc_trigrams.json  (+1 more)
(+32 files in other folders)
