[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "banking77-intent-classifier"
version = "0.1.0"
description = "Production-ready intent classification experiments across Banking77, CLINC150, and future datasets."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "OpenAI Codex" }
]
dependencies = [
    "datasets>=2.20.0",
    "joblib>=1.4.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
    "sentence-transformers>=3.0.0",
    "spacy>=3.8.0",
    "spacy-lookups-data>=1.0.5",
    "transformers>=4.46.0",
    "accelerate>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.8.0",
]

[project.scripts]
banking77-train = "banking77_intent_classifier.cli.main:main"
banking77-tune = "banking77_intent_classifier.cli.tune:main"
banking77-sweep-oos = "banking77_intent_classifier.cli.sweep_oos:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
